--- a/index.html
+++ b/index.html
@@ -71,31 +71,31 @@
                     <!-- Slide 1 -->
                     <div class="swiper-slide">
                         <div class="hero-slide hero-placeholder">
-                            <img src="/attached_assets/daniel-barnes-RKdLlTyjm5g-unsplash.jpg" alt="">
+                            <img src="./attached_assets/daniel-barnes-RKdLlTyjm5g-unsplash.jpg" alt="">
                         </div>
                     </div>
                     <!-- Slide 2 -->
                     <div class="swiper-slide">
                         <div class="hero-slide hero-placeholder">
-                            <img src="/attached_assets/banner3.jpg" alt="">
+                            <img src="./attached_assets/banner3.jpg" alt="">
                         </div>
                     </div>
                     <!-- Slide 3 -->
                     <div class="swiper-slide">
                         <div class="hero-slide hero-placeholder">
-                            <img src="/attached_assets/banner2.jpg" alt="">
+                            <img src="./attached_assets/banner2.jpg" alt="">
                         </div>
                     </div>
                      <!-- Slide 4 -->
                      <div class="swiper-slide">
                         <div class="hero-slide hero-placeholder">
-                            <img src="/attached_assets/banner4.jpg" alt="">
+                            <img src="./attached_assets/banner4.jpg" alt="">
                         </div>
                     </div>
                      <!-- Slide 5 -->
                      <div class="swiper-slide">
                         <div class="hero-slide hero-placeholder">
-                            <img src="/attached_assets/banner5.jpg" alt="">
+                            <img src="./attached_assets/banner5.jpg" alt="">
                         </div>
                     </div>
                 </div>
@@ -126,7 +126,7 @@
                     <div class="about-img">
                         <!-- Placeholder for professional realtor image -->
                         <div class="placeholder-image rounded">
-                           <img src="/attached_assets/danist-soh-ZYrnNO1yvrU-unsplash.jpg" alt="">
+                           <img src="./attached_assets/danist-soh-ZYrnNO1yvrU-unsplash.jpg" alt="">
                         </div>
                     </div>
                 </div>
